command line notes